# rust-simple-chat

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  build.rs  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  rustsec.yml  security_audit.yml
benches/: benches.rs
cargo/: config.toml
migrations/: 000001_init.down.sql  000001_init.up.sql
scripts/: init_postgres.sh
src/: config.rs  lib.rs  main.rs  server.rs
src/api/: handler.rs  healthz.rs  mod.rs  query.rs  router.rs  state.rs
src/api/v1/: list_messages.rs  login.rs  mod.rs  post_message.rs
src/core_utils/: closer.rs  errors.rs  hooks.rs  http_server.rs  http_server_errors.rs  http_server_middlewares.rs  jwt.rs  logger.rs  macro_utils.rs  mod.rs  observability.rs  postgres_pool.rs  swagger.rs
src/cronjob/: dummy_job.rs  mod.rs
src/domain/: message.rs
src/entities/: auth.rs  message.rs
src/infra/repositories/: messages.rs  mod.rs  pool.rs
src/libs/: closer.rs  http_server.rs  http_server_middlewares.rs  jwt.rs  mod.rs  observability.rs  postgres_pool.rs
src/libs/http/: errors.rs  extractors.rs  middlewares.rs  mod.rs  server.rs  server_errors.rs
src/libs/http/middlewares/: cors.rs  metrics.rs  mod.rs  trace.rs
