[package]
name = "rust-simple-chat"
version = "0.1.0"
edition = "2024"

[profile.production]
inherits = "release"
lto = true

[profile.profiling]
inherits = "release"
debug = true

[[bin]]
name = "chat"
path = "src/bin/chat/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker/main.rs"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
serde_json = "1.0.140"
http-body-util = "0.1.3"
mime = "0.3.17"

[dependencies]
anyhow = { version = "1.0.97", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = { version = "0.1.88" }
mockall = { version = "0.13.1" }

caslex = { version = "0.2.0", features = ["auth"] }
caslex-extra = { version = "0.2.0", features = ["observability", "postgres", "jwt"] }
axum = { version = "0.8.3", features = ["http1", "http2", "json", "macros"] }
tower = { version = "0.5.2", default-features = false }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "0.2.0" }

tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio-postgres-utils = { version = "0.2.0" }
deadpool-postgres = { version = "0.14.1" }
tracing = { version = "0.1.41", default-features = false }
