[package]
name = "rust-simple-chat"
version = "0.1.0"
edition = "2024"

[profile.release-lto]
inherits = "release"
lto = true

[profile.profiling]
inherits = "release"
debug = true

[[bin]]
name = "chat"
path = "src/bin/chat/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker/main.rs"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
serde_json = "1.0.140"

[dependencies]
anyhow = { version = "1.0.97", default-features = false }
async-trait = { version = "0.1.88" }
axum = { version = "0.8.3", features = ["http1", "http2", "json", "macros"] }
caslex = { version = "0.2.2", features = ["auth"] }
caslex-extra = { version = "0.2.3", features = ["observability", "postgres", "jwt"] }
chrono = { version = "0.4.40", features = ["serde"] }
deadpool-postgres = { version = "0.14.1" }
mockall = { version = "0.13.1" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio-postgres-utils = { version = "0.2.0" }
tokio-util = "0.7.14"
tower = { version = "0.5.2", default-features = false }
tracing = { version = "0.1.41", default-features = false }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "0.2.0" }
validator = { version = "0.20.0", features = ["derive"] }
