[package]
name = "rust-simple-chat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chat"
path = "src/bin/chat/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker/main.rs"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
async-trait = { version = "0.1.88" }
axum = { version = "0.8.4", features = ["http1", "http2", "json", "macros"] }
caslex = { version = "0.2.6", features = ["auth"] }
caslex-extra = { version = "0.2.6", features = ["observability", "postgres", "jwt"] }
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-postgres = { version = "0.14.1" }
mockall = { version = "0.13.1" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio-postgres-utils = { version = "0.2.0" }
tokio-util = "0.7.16"
tower = { version = "0.5.2", default-features = false }
tracing = { version = "0.1.41", default-features = false }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "0.2.0" }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
serde_json = "1.0.142"

[profile.release-lto]
inherits = "release"
lto = true

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "benches"
harness = false
